@@ -86,6 +86,8 @@
 				<string>handleExecScriptCommand:</string>
 				<key>select</key>
 				<string>handleSelectScriptCommand:</string>
+				<key>terminate</key>
+				<string>handleTerminateScriptCommand:</string>
 				<key>write</key>
 				<string>handleWriteScriptCommand:</string>
 			</dict>
@@ -200,6 +202,15 @@
 			<string>ITRM</string>
 			<key>AppleEventCode</key>
 			<string>Slct</string>
+			<key>CommandClass</key>
+			<string>NSScriptCommand</string>
+		</dict>
+		<key>terminate</key>
+		<dict>
+			<key>AppleEventClassCode</key>
+			<string>ITRM</string>
+			<key>AppleEventCode</key>
+			<string>Term</string>
 			<key>CommandClass</key>
 			<string>NSScriptCommand</string>
 		</dict>
